# verses-api

./: .env.example  .gitattributes  Cargo.toml  Dockerfile  README.md
.sqlx/: query-38f846e4ce7c9e45334994b0871710fa36f9fd03d256088df1ecd2b11391985c.json  query-882d9bfecaaae9a82c688e6d85d827c852c1ca1f72f69142124018ae5d086f3a.json  query-f20baf277c01b764b7c9dc72387ca9607dedeabfd87acca4d5f94a4a38006fd3.json
csv/: ASV.csv.zst  CUVS.csv.zst  GOVBSI.csv.zst  KJV.csv.zst  MLSVP.csv.zst  OOVBSI.csv.zst  TOVBSI.csv.zst  WEB.csv.zst  WEBU.csv.zst
migrations/: 0006_add_seo_name_to_translation.sql  0007_add_regional_name.sql
sql/: .gitattributes  latest_full.sql.zst
src/: main.rs  models.rs  routes.rs
