[package]
name = "verses-api"
authors = ["Berin Aniesh <berinaniesh@gmail.com>"]
repository = "https://gitlab.com/Scripture/verses-api"
version = "0.2.0"
edition = "2024"
license = "The Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "^0.7.1"
actix-files = "^0.6.9"
actix-web = "^4.12.1"
dotenvy = "^0.15.7"
env_logger = "^0.11.8"
rand = "^0.9.2"
serde = { version = "^1.0.228", features = ["derive"] }
serde_json = { version = "^1.0.145", features = ["preserve_order"] }
sqlx = { version = "^0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros"] }
thiserror = "^2.0.17"
tokio = { version = "^1.48.0", features = ["fs", "rt-multi-thread", "macros"] }
utoipa = { version = "^5.4.0", features = ["actix_extras", "preserve_order"] }
utoipa-swagger-ui = { version = "^9.0.2", features = ["actix-web"] }
